external-crates/move/crates/move-compiler/tests/move_check/parser/vector_literal_unclosed_type_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:28
  │
4 │         let _v = vector<u64[0, 1];
  │                        -   ^ Expected '>'
  │                        │    
  │                        To match this '<'
